# nonebot-plugin-milky2onebot

./: README.md  map.md  pyproject.toml
src/milky2onebot/: __init__.py  compat.py  config.py  process.py  relay.py  tool.py  tran64.py  tran65.py
src/milky2onebot/v11/: __init__.py  api.py  process.py  relay.py
